Alignment problem for the solutions section of the homepage is fixed.

--- a/Content/css/homecss/main.css
+++ b/Content/css/homecss/main.css
@@ -5619,6 +5619,7 @@ img.mfp-img {
   position: relative;
   top: 3px;
   font-size: 1em;
+  margin-left: 7px;
 }
 .service-item .service-text a.read-more:hover {
   text-decoration: none;
